# ai

./: README.md  pyproject.toml
ai/: __main__.py  log.py  settings.py
ai/protocol/: __init__.py  exceptions.py  types.py
ai/protocol/bot/: __init__.py  _strict.py  bot.py  chat_context.py  inference.py  model.py  tool_context.py  utils.py
ai/protocol/bot/_provider_format/: openai.py  utils.py
ai/service/openai/: agent.py  bot.py  model.py  utils.py
ai/service/redis/: lifespan.py
ai/service/tools/: weather.py
ai/utils/: __init__.py  misc.py
ai/utils/aio/: __init__.py
ai/web/: application.py  lifespan.py
ai/web/api/: router.py
ai/web/api/bot/: __init__.py  views.py
ai/web/api/health/: __init__.py  views.py
