[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "docstring-parser>=0.16",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "openai>=1.86.0",
    "pydantic-settings>=2.9.1",
    "redis>=6.2.0",
    "shortuuid>=1.0.13",
    "sse-starlette>=2.3.6",
    "uvicorn>=0.34.3",
]
